--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -94,6 +94,8 @@
 	<h2 style = "font-size: 30px">Problem 4</h2>
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText5">
+			<p> Please read this page along with the screen reading audio below. </p>
+			<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/Howdy.mp3" type="audio/mp3"></audio>
 			<h1>Unveiling the Web Accessibility Challenge: Missing or Inaccurate Alt Text</h1>
 
 			<h2>Introduction</h2>
